--- a/package.json
+++ b/package.json
@@ -66,26 +66,26 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
     "documentation": "^4.0.0-rc.1",
-    "eslint": "4.2.0",
+    "eslint": "4.4.1",
     "eslint-config-standard": "10.2.1",
-    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-better": "^0.1.5",
-    "eslint-plugin-eslint-comments": "^1.0.2",
+    "eslint-plugin-eslint-comments": "1.0.3",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-node": "^5.1.0",
+    "eslint-plugin-node": "5.1.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "3.0.1",
     "husky": "0.14.3",
     "istanbul": "0.4.x",
     "locus": "^2.0.1",
-    "nyc": "^11.0.3",
+    "nyc": "11.1.0",
     "ramda": "^0.24.1",
-    "rollup": "0.43.1",
+    "rollup": "0.45.2",
     "rollup-plugin-babili": "^3.1.0",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-cleanup": "^1.0.1",
-    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-commonjs": "8.1.0",
     "rollup-plugin-istanbul": "^1.1.0",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.0.0",
