--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "entrust",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "delegatee-last structure for curried functions",
   "license": "ISC",
   "main": "entrust.js",
@@ -45,7 +45,7 @@
   "scripts": {
     "start": "nps",
     "test": "nps test",
-    "precommit": "npm run due-diligence"
+    "precommit": "nps dueDiligence"
   },
   "dependencies": {
     "katsu-curry": "^0.4.0"
@@ -70,6 +70,7 @@
     "husky": "0.14.3",
     "istanbul": "0.4.x",
     "locus": "^2.0.1",
+    "nps": "^5.7.0",
     "nyc": "11.1.0",
     "ramda": "^0.24.1",
     "rollup": "0.45.2",
