--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "babel-register": "^6.26.0",
     "chalk": "^2.1.0",
     "depcheck": "^0.6.7",
-    "documentation": "^5.3.1",
-    "eslint": "^4.6.1",
+    "documentation": "5.3.2",
+    "eslint": "4.7.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-ava": "^4.2.2",
     "eslint-plugin-babel": "^4.1.2",
@@ -86,11 +86,11 @@
     "execa": "^0.8.0",
     "husky": "^0.14.3",
     "jayin": "^0.0.3",
-    "jest": "^21.0.2",
-    "jest-cli": "^21.0.2",
+    "jest": "21.1.0",
+    "jest-cli": "21.1.0",
     "nps": "^5.7.1",
     "nps-utils": "^1.3.0",
-    "rollup": "^0.49.3",
+    "rollup": "0.50.0",
     "rollup-plugin-alias": "^1.3.1",
     "rollup-plugin-babel-minify": "^3.1.2",
     "rollup-plugin-buble": "^0.15.0",
