--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eslint-plugin-react": "^7.3.0",
     "eslint-plugin-standard": "^3.0.1",
     "execa": "^0.8.0",
+    "germs": "^0.0.2",
     "husky": "^0.14.3",
     "jayin": "^0.0.3",
     "jest": "21.1.0",
