--- a/package.json
+++ b/package.json
@@ -5,84 +5,100 @@
   "license": "ISC",
   "main": "entrust.js",
   "reveal": true,
-  "ava": {
-    "require": [
-      "babel-register"
-    ],
-    "babel": "inherit"
-  },
-  "nyc": {
-    "statements": 100,
-    "branches": 100,
-    "functions": 100,
-    "lines": 100,
-    "reporter": [
-      "lcov",
-      "json",
-      "html",
-      "text",
-      "text-summary"
-    ],
-    "exclude": [
-      "node_modules",
-      "config",
-      "coverage",
-      "src/*.spec.js",
-      "src/index.js",
-      "entrust.js",
-      "entrust.es.js"
-    ],
-    "include": [
-      "src/*.js",
-      "!src/*.spec.js"
-    ],
-    "all": true,
-    "check-coverage": true,
-    "require": [
-      "babel-register"
-    ]
-  },
   "scripts": {
-    "start": "nps",
+    "dependencies": "nps dependencies",
+    "readme": "nps readme",
+    "lint": "nps lint",
     "test": "nps test",
-    "precommit": "nps dueDiligence"
+    "docs": "nps docs",
+    "bundle": "nps bundle",
+    "build": "nps build",
+    "precommit": "nps precommit"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brekk/entrust.git"
+  },
+  "keywords": [
+    "build",
+    "root",
+    "base"
+  ],
+  "author": "brekk",
+  "bugs": {
+    "url": "https://github.com/brekk/entrust/issues"
+  },
+  "homepage": "https://github.com/brekk/entrust#readme",
+  "jest": {
+    "modulePaths": [
+      "src"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "coveragePathIgnorePatterns": [
+      "test-helpers.js"
+    ],
+    "mapCoverage": true,
+    "moduleNameMapper": {},
+    "moduleFileExtensions": [
+      "js",
+      "json"
+    ],
+    "testMatch": [
+      "**/*.spec.(jsx|js)"
+    ]
   },
   "dependencies": {
     "katsu-curry": "^0.4.0"
   },
   "devDependencies": {
-    "babel-plugin-istanbul": "^4.1.4",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "8.0.0",
+    "babel-jest": "^21.0.2",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "documentation": "^5.3.1",
-    "eslint": "4.6.1",
-    "eslint-config-standard": "10.2.1",
-    "eslint-plugin-babel": "4.1.2",
+    "babel-preset-fbjs": "^2.1.4",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chalk": "^2.1.0",
+    "depcheck": "^0.6.7",
+    "documentation": "5.3.2",
+    "eslint": "4.7.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-ava": "^4.2.2",
+    "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-better": "^0.1.5",
-    "eslint-plugin-eslint-comments": "1.0.3",
+    "eslint-plugin-eslint-comments": "^1.0.3",
     "eslint-plugin-fp": "^2.3.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-node": "5.1.1",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "3.0.1",
-    "husky": "0.14.3",
-    "istanbul": "0.4.x",
-    "locus": "^2.0.1",
-    "nps": "^5.7.0",
-    "nyc": "11.2.1",
-    "ramda": "^0.24.1",
-    "rollup": "0.49.3",
-    "rollup-plugin-babili": "^3.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "execa": "^0.8.0",
+    "germs": "^0.0.2",
+    "husky": "^0.14.3",
+    "jayin": "^0.0.3",
+    "jest": "21.1.0",
+    "jest-cli": "21.1.0",
+    "nps": "^5.7.1",
+    "nps-utils": "^1.3.0",
+    "rollup": "0.50.0",
+    "rollup-plugin-alias": "^1.3.1",
+    "rollup-plugin-babel-minify": "^3.1.2",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-cleanup": "^1.0.1",
-    "rollup-plugin-commonjs": "8.2.1",
-    "rollup-plugin-istanbul": "^1.1.0",
+    "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-progress": "^0.4.0"
-  },
-  "repository": "https://github.com/brekk/entrust",
-  "author": "brekk"
+  }
 }
