--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "chalk": "^2.1.0",
     "depcheck": "^0.6.7",
     "documentation": "5.3.2",
-    "eslint": "4.7.0",
+    "eslint": "4.7.2",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-ava": "^4.2.2",
     "eslint-plugin-babel": "^4.1.2",
@@ -81,10 +81,10 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-react": "7.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "execa": "^0.8.0",
-    "germs": "^0.0.2",
+    "germs": "0.0.3",
     "husky": "^0.14.3",
     "jayin": "^0.0.3",
     "jest": "21.1.0",
@@ -94,7 +94,7 @@
     "rollup": "0.50.0",
     "rollup-plugin-alias": "^1.3.1",
     "rollup-plugin-babel-minify": "^3.1.2",
-    "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-buble": "0.16.0",
     "rollup-plugin-cleanup": "^1.0.1",
     "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-json": "^2.3.0",
