--- a/package.json
+++ b/package.json
@@ -30,25 +30,17 @@
   },
   "homepage": "https://github.com/brekk/entrust#readme",
   "jest": {
-    "modulePaths": [
-      "src"
-    ],
+    "modulePaths": ["src"],
     "moduleDirectories": [
       "node_modules",
       "src"
     ],
-    "coveragePathIgnorePatterns": [
-      "test-helpers.js"
-    ],
     "mapCoverage": true,
-    "moduleNameMapper": {},
     "moduleFileExtensions": [
       "js",
       "json"
     ],
-    "testMatch": [
-      "**/*.spec.(jsx|js)"
-    ]
+    "testMatch": ["**/*.spec.(jsx|js)"]
   },
   "dependencies": {
     "katsu-curry": "^0.4.0"
@@ -71,7 +63,7 @@
     "chalk": "^2.1.0",
     "depcheck": "^0.6.7",
     "documentation": "5.3.2",
-    "eslint": "4.7.2",
+    "eslint": "4.8.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-ava": "^4.2.2",
     "eslint-plugin-babel": "^4.1.2",
@@ -79,16 +71,16 @@
     "eslint-plugin-eslint-comments": "^1.0.3",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-node": "5.2.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "7.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "execa": "^0.8.0",
-    "germs": "^0.0.4",
+    "germs": "^0.1.9",
     "husky": "^0.14.3",
     "jayin": "^0.0.3",
-    "jest": "21.2.0",
-    "jest-cli": "21.2.0",
+    "jest": "21.2.1",
+    "jest-cli": "21.2.1",
     "nps": "^5.7.1",
     "nps-utils": "^1.3.0",
     "rollup": "0.50.0",
