--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     ]
   },
   "dependencies": {
-    "katsu-curry": "^0.4.0"
+    "katsu-curry": "0.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -64,10 +64,10 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
-    "chalk": "^2.1.0",
-    "depcheck": "^0.6.7",
-    "documentation": "5.3.2",
-    "eslint": "4.8.0",
+    "chalk": "2.2.0",
+    "depcheck": "0.6.8",
+    "documentation": "5.3.3",
+    "eslint": "4.9.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-ava": "^4.2.2",
     "eslint-plugin-babel": "^4.1.2",
@@ -76,7 +76,7 @@
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "5.2.0",
-    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-react": "7.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "execa": "^0.8.0",
@@ -86,13 +86,13 @@
     "jest": "21.2.1",
     "jest-cli": "21.2.1",
     "nps": "^5.7.1",
-    "nps-utils": "^1.3.0",
+    "nps-utils": "1.4.0",
     "rollup": "0.50.0",
     "rollup-plugin-alias": "^1.3.1",
     "rollup-plugin-babel-minify": "^3.1.2",
     "rollup-plugin-buble": "0.16.0",
     "rollup-plugin-cleanup": "^1.0.1",
-    "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-commonjs": "8.2.3",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-progress": "^0.4.0"
