--- a/package.json
+++ b/package.json
@@ -47,13 +47,13 @@
     ]
   },
   "dependencies": {
-    "katsu-curry": "0.6.0"
+    "katsu-curry": "^0.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.3",
-    "babel-jest": "21.2.0",
+    "babel-jest": "^22.0.1",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
@@ -65,31 +65,30 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "chalk": "^2.3.0",
-    "depcheck": "0.6.8",
-    "documentation": "5.3.3",
-    "eslint": "^4.12.1",
-    "eslint-config-standard": "^10.2.1",
+    "depcheck": "^0.6.8",
+    "documentation": "^5.3.5",
+    "eslint": "^4.13.1",
+    "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-ava": "^4.4.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-better": "^0.1.5",
     "eslint-plugin-eslint-comments": "^2.0.1",
     "eslint-plugin-fp": "^2.3.0",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "3.6.0",
+    "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-standard": "^3.0.1",
     "execa": "^0.8.0",
     "germs": "^0.1.9",
     "husky": "^0.14.3",
     "jayin": "^0.0.3",
-    "jest": "21.2.1",
-    "jest-cli": "21.2.1",
-    "madge": "^2.2.0",
+    "jest": "^22.0.1",
+    "jest-cli": "^22.0.1",
     "nps": "^5.7.1",
     "nps-utils": "^1.5.0",
-    "rollup": "^0.52.1",
-    "rollup-plugin-alias": "^1.3.1",
+    "rollup": "^0.52.2",
+    "rollup-plugin-alias": "^1.4.0",
     "rollup-plugin-babel-minify": "^3.1.2",
     "rollup-plugin-buble": "^0.18.0",
     "rollup-plugin-cleanup": "^2.0.0",
