I AM CLINTON. AND I AM DOLE. IT DOES NOT MATTER WHICH ONE OF US YOU CHOOSE SO LONG AS YOU CHOOSE ONE OF US

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.18",
   "description": "delegatee-last structure for curried functions",
   "license": "ISC",
+  "repository": "brekk/entrust",
+  "author": "brekk",
   "main": "entrust.js",
-  "reveal": true,
   "scripts": {
     "dependencies": "nps dependencies",
     "readme": "nps readme",
@@ -15,37 +16,11 @@
     "build": "nps build",
     "precommit": "nps precommit"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/brekk/entrust.git"
-  },
   "keywords": [
     "build",
     "root",
     "base"
   ],
-  "author": "brekk",
-  "bugs": {
-    "url": "https://github.com/brekk/entrust/issues"
-  },
-  "homepage": "https://github.com/brekk/entrust#readme",
-  "jest": {
-    "modulePaths": [
-      "src"
-    ],
-    "moduleDirectories": [
-      "node_modules",
-      "src"
-    ],
-    "mapCoverage": true,
-    "moduleFileExtensions": [
-      "js",
-      "json"
-    ],
-    "testMatch": [
-      "**/*.spec.(jsx|js)"
-    ]
-  },
   "dependencies": {
     "katsu-curry": "^0.7.4"
   },
@@ -95,5 +70,64 @@
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-progress": "^0.4.0"
-  }
+  },
+  "clinton": {
+    "inherit": false,
+    "rules": {
+      "cli": "error",
+      "editorconfig": "off",
+      "filename-case": [
+        "error",
+        {
+          "case": "kebabCase"
+        }
+      ],
+      "gulp": [
+        "error",
+        "optional"
+      ],
+      "keywords": "error",
+      "license": "ISC",
+      "max-depth": "warn",
+      "no-callback": "error",
+      "no-dup-keywords": "error",
+      "no-empty-keywords": "error",
+      "no-git-merge-conflict": "error",
+      "pkg-dependency-order": "error",
+      "pkg-description": "off",
+      "pkg-engine": "off",
+      "pkg-main": "error",
+      "pkg-name": "error",
+      "pkg-normalize": "warn",
+      "pkg-property-order": "error",
+      "pkg-schema": "error",
+      "pkg-shorthand-repository": "error",
+      "pkg-user-order": "error",
+      "readme": "error",
+      "test-script": "error",
+      "use-travis": "off",
+      "valid-version": "error",
+      "ava": "off",
+      "gitignore": "error",
+      "xo": "off"
+    }
+  },
+  "jest": {
+    "modulePaths": [
+      "src"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "mapCoverage": true,
+    "moduleFileExtensions": [
+      "js",
+      "json"
+    ],
+    "testMatch": [
+      "**/*.spec.(jsx|js)"
+    ]
+  },
+  "reveal": true
 }
